# C

./: README.md
C2_stringplus/: README_RUS.md
C2_stringplus/src/: Makefile  s21_string.c  s21_string.h  s21_string_test.c
C3_SimpleBashUtils/: README.md
C3_SimpleBashUtils/src/cat/: Makefile  cat_test.sh  s21_cat.c
C3_SimpleBashUtils/src/grep/: grep_test.sh
C4_math/: README_RUS.md
C4_math/src/: Makefile  s21_abs.c  s21_acos.c  s21_asin.c  s21_atan.c  s21_ceil.c  s21_cos.c  s21_exp.c  s21_floor.c  s21_fmod.c  s21_log.c  s21_math.h  s21_pow.c  s21_sin.c  s21_sqrt.c  s21_tan.c
C4_math/src/tests/: tests_s21_math.check
C5_decimal/: README.md
C5_decimal/src/: Makefile  s21_add.c  s21_add.h  s21_another_functions.c  s21_another_functions.h  s21_comparison.c  s21_comparison.h  s21_decimal.c  s21_decimal.h  s21_mul.c  s21_mul.h
C5_decimal/src/tests/: tests_s21_decimal.check
C6_matrix/: README.md
C6_matrix/src/: Makefile  s21_matrix.c  s21_matrix.h
C6_matrix/src/tests/: tests_s21_matrix.check
C7_SmartCalc_v1.0-0/: README_RUS.md
C7_SmartCalc_v1.0-0/src/: Makefile  Readme.html  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcustomplot.h  s21_smartcalc.c  s21_smartcalc.h
C7_SmartCalc_v1.0-0/src/tests/: tests_s21_smartcalc.check
C7_SmartCalc_v1.0/src/: smartcalc.pro
C8_3DViewer_v1.0/: README_RUS.md
C8_3DViewer_v1.0/src/: Doxyfile  Makefile  README.md
C8_3DViewer_v1.0/src/cmake_src/: CMakeLists.txt
C8_3DViewer_v1.0/src/support/: Dockerfile  entrypoint.sh  run.sh
C8_3DViewer_v1.0/src/viewer_back/: 3dviewer.h  3dviewer_affin.c  3dviewer_parser.c  Makefile  test.c
C8_3DViewer_v1.0/src/viewer_back/lib_tests/: affin_ox.check  affin_oy.check  affin_oz.check  affin_scale.check  affin_shift.check  parser.check
C8_3DViewer_v1.0/src/viewer_back/shell_script/: docker_report.sh
C8_3DViewer_v1.0/src/viewer_front/: desktop.ui  gif.h  main.cpp  viewerfront.cpp  viewerfront.h  viewerogl.cpp  viewerogl.h  viewersettings.cpp  viewersettings.h
